# research-agents-swarm

./: .env.example  .gitignore  1-WHY-I-DID-IT-RU.md  2-WHY-I-DID-IT-EN.md  ARCHITECTURE.md  Dockerfile  README.md  STAR.md  TESTS.md  TODO.md  docker-compose.yml  pyproject.toml  theme-of-the-news.txt
logs/retrieval_failures/: failure_1781192358144_all.json  failure_1781192488291_all.json  failure_1781192650262_all.json  failure_1781192675510_all.json  failure_1781192678908_all.json  failure_1781192682489_all.json  failure_1781192685048_all.json  failure_1781192688220_all.json  failure_1781193167127_all.json  failure_1781193171164_all.json  failure_1781193173952_all.json  failure_1781193176559_all.json  failure_1781193179152_all.json
src/: http_client.py  logging_config.py  main.py  mcp_client.py  news_sender.py  utils.py
src/agents/: _judge_helpers.py  _planner_helpers.py  _searcher_helpers.py  _summarizer_helpers.py  fact_checker.py  judge.py  planner.py  searcher.py  summarizer.py
src/config/: domain.py  settings.py
src/graph/: routing.py  state.py  workflow.py
src/llm/: client.py
src/memory/: vector_storage.py
src/observability/: langfuse.py
src/prompts/: fact_checker_factcheck_system.jinja  judge_judge_system_prompt.jinja  planner_plan_system.jinja  planner_replan_system.jinja  searcher_format_system.jinja  searcher_system_prompt.jinja  summarizer_summarizer_system.jinja
src/research_swarm/: logging_config.py  main.py  mcp_client.py  news_sender.py  utils.py
src/research_swarm/agents/: fact_checker.py  judge.py  planner.py  searcher.py  summarizer.py
src/research_swarm/config/: settings.py
src/research_swarm/graph/: routing.py  schemas.py  state.py  workflow.py
src/research_swarm/llm/: client.py
src/research_swarm/memory/: vector_storage.py
src/research_swarm/observability/: langfuse.py
src/research_swarm/search/: __init__.py  (+4 more)
src/search/: __init__.py  _http.py  base.py  health.py  orchestrator.py
tests/: conftest.py  test_agents.py  test_langfuse.py  test_llm_client.py  test_logging.py  test_routing.py  test_schemas.py  test_search.py  test_search_http.py  test_settings.py  test_state_models.py  test_workflow.py  test_workflow_graph.py
tests/eval/: smoke_domains.yaml
(+19 files in other folders)
